--- a/jenkinsfile
+++ b/jenkinsfile
@@ -56,7 +56,7 @@ pipeline {
                         echo "🚀 Building and pushing Docker image..."
                         
                         withCredentials([usernamePassword(
-                            credentialsId: 'dockerhub',
+                            credentialsId: 'docker',
                             usernameVariable: 'DOCKER_USER',
                             passwordVariable: 'DOCKER_PASS'
                         )]) {
@@ -96,7 +96,7 @@ pipeline {
                 script {
                     echo "🔍 Verifying push was successful..."
                     withCredentials([usernamePassword(
-                        credentialsId: 'dockerhub',
+                        credentialsId: 'docker',
                         usernameVariable: 'DOCKER_USER',
                         passwordVariable: 'DOCKER_PASS'
                     )]) {
