--- a/jenkinsfile
+++ b/jenkinsfile
@@ -32,8 +32,24 @@ pipeline {
                         node --version
                         npm --version
                         podman --version
+                        unzip -v || echo "unzip not available"
                     '''
                 }
+            }
+        }
+
+        stage("Install Required Tools") {
+            steps {
+                sh '''
+                    # Install unzip if not available
+                    if ! command -v unzip &> /dev/null; then
+                        echo "Installing unzip..."
+                        yum install -y unzip 2>/dev/null || apt-get update && apt-get install -y unzip
+                    fi
+                    
+                    # Verify unzip installation
+                    unzip -v && echo "unzip is available" || echo "unzip installation failed"
+                '''
             }
         }
 
@@ -60,13 +76,39 @@ pipeline {
                             echo "Setting up SonarScanner..."
                             if ! command -v sonar-scanner &> /dev/null; then
                                 echo "Installing SonarScanner..."
-                                wget -q https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
-                                unzip -q sonar-scanner-cli-4.8.0.2856-linux.zip
-                                export PATH=$PWD/sonar-scanner-4.8.0.2856-linux/bin:$PATH
-                                echo "SonarScanner installed successfully"
+                                
+                                # Download SonarScanner with error handling
+                                echo "Downloading SonarScanner..."
+                                if wget -q https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip; then
+                                    echo "✓ Download successful"
+                                    
+                                    # Verify zip file integrity
+                                    echo "Verifying zip file..."
+                                    if unzip -t sonar-scanner-cli-4.8.0.2856-linux.zip &> /dev/null; then
+                                        echo "✓ Zip file is valid, extracting..."
+                                        unzip -q sonar-scanner-cli-4.8.0.2856-linux.zip -d sonar-scanner
+                                        export PATH=$PWD/sonar-scanner/sonar-scanner-4.8.0.2856-linux/bin:$PATH
+                                        echo "✓ SonarScanner installed successfully"
+                                    else
+                                        echo "❌ ERROR: Zip file is corrupted"
+                                        echo "Cleaning up corrupted file..."
+                                        rm -f sonar-scanner-cli-4.8.0.2856-linux.zip
+                                        exit 1
+                                    fi
+                                else
+                                    echo "❌ ERROR: Failed to download SonarScanner"
+                                    exit 1
+                                fi
                             else
-                                echo "SonarScanner is already installed"
+                                echo "✓ SonarScanner is already installed"
                             fi
+                            
+                            # Verify sonar-scanner is available
+                            echo "Verifying sonar-scanner command..."
+                            sonar-scanner --version || {
+                                echo "❌ ERROR: sonar-scanner command not working"
+                                exit 1
+                            }
                             
                             echo "Starting SonarQube analysis..."
                             sonar-scanner \\
@@ -78,6 +120,8 @@ pipeline {
                                 -Dsonar.exclusions=**/node_modules/**,**/.*/** \\
                                 -Dsonar.projectName="Register App" \\
                                 -Dsonar.projectVersion=1.0
+                            
+                            echo "✓ SonarQube analysis completed successfully"
                         '''
                     }
                 }	
@@ -180,6 +224,10 @@ pipeline {
         always { 
             script {
                 echo "🧹 Cleaning up workspace..."
+                sh '''
+                    echo "Cleaning up temporary files..."
+                    rm -rf sonar-scanner* *.zip
+                '''
             }
             cleanWs() 
         }
@@ -197,6 +245,18 @@ pipeline {
         }
         failure { 
             echo "💥 PIPELINE FAILED!" 
+            script {
+                sh '''
+                    echo "Debug information:"
+                    echo "Java version:"
+                    java -version 2>&1 || echo "Java not available"
+                    echo "Node version:"
+                    node --version || echo "Node not available"
+                    echo "Current directory:"
+                    pwd
+                    ls -la
+                '''
+            }
         }
     }
 }
